sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: Missing closing brace `}' assumed here
def bubbleSort()  {
^AlgBubbleSort1:17: error: Missing closing brace `}' assumed here
}
^