sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	for (i <- 0 to lentgh-2) {
		var minpos=i 
		for (j<- i to lentgh-2) {
			if (tab(j) < tab(minpos)) {
				minpos=j
			}
		}
		

		
		
